# workshop-airflow

./: README.md  exemplo_00.py  pyproject.toml  requirements.txt
dags/: api_to_postgres.py  duckdb_custom_operator.py  main.py  primeira_dag.py  quarta_dag.py  quinta_dag.py  segunda_dag.py  sexta_dag.py  terceira_dag.py
exemplos_orquestração_sem_airflow/: exemplo_01.py  exemplo_02.py
exemplos_orquestração_sem_airflow/frontend/pipeline/: pipeline.py
include/: controller.py  db.py  main.py  schema.py
